--- a/index.html
+++ b/index.html
@@ -10,28 +10,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="logo">
-                <a href="/">
-                    <img src="src/images/logo.png" alt="logo">
-                </a>
-                <h1>thebank</h1>
-            </div>
+    <header class="header">
+        <a href="/" class="logo">
+            <img src="src/images/logo.png" alt="logo">
+            <h1>thebank</h1>
+        </a>
     
-            <nav>
-                <ul>
-                    <li><a href="home">Home</a></li>
-                    <li><a href="sobre" class="sobre">Sobre</a></li>
-                    <li><a href="contato">Contato</a></li>
-                    <li><a href="blog">Blog</a></li>
-                    <li><a href="carreira">Carreira</a></li>
-                    <li><a href="cadastra-se" class="cadastra-se">Cadastra-se</a></li>
-                </ul>
-            </nav>
-        </div>
+         <nav>
+            <ul class="menu">
+                <li><a href="home">Home</a></li>
+                <li><a href="sobre" class="sobre">Sobre</a></li>
+                <li><a href="contato">Contato</a></li>
+                <li><a href="blog">Blog</a></li>
+                <li><a href="carreira">Carreira</a></li>
+                <li><a href="cadastra-se" class="btn">Cadastra-se</a></li>
+             </ul>
+        </nav>
     </header>
 </body>
 </html>
